--- a/doll.html
+++ b/doll.html
@@ -23,7 +23,9 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
       <img src="img/doll7.png" alt="Mockup of doll packaging"></a>
       <img src="img/doll5.png" alt="Doll illustration-front view"></a>
     </div>
-    <p>I designed new branding and packaging for an existing toy: Momiji Doll. This series is for their DIY doll which arrives completely white and the child paints themselves. I created the template to print the packaging.</p>
+    <p>I designed new branding and packaging for an existing toy: Momiji Doll.
+      This series is for their DIY doll which arrives completely white and the child paints themselves.
+      I created the template to print the packaging.</p>
 </main>
 
 <div class="contact">
