--- a/fromm.html
+++ b/fromm.html
@@ -21,7 +21,14 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
       <img src="img/fromm4.jpg" alt="Detail of fog food tag"></a>
       <img src="img/fromm5.jpg" alt="Detail of dog pattern"></a>
     </div>
-    <p>For this project I rebranded a current dog food company - Fromm's. This is a trusted family owned company that prides itself on quality. I wanted to mix the rustic family-owned feeling with high value so I created a series of packaging that is made of recyclable kraft paper which looks rustic, with silhouettes and type that are classic black and white to portray the great quality food inside. I have designed a template for a large box of dog food with handles as well as a smaller bag. This packaging could easily be carried over for all of their flavours.</p>
+    <p>For this project I rebranded a current dog food company - Fromm's.
+       This is a trusted family owned company that prides itself on quality.
+       I wanted to mix the rustic family-owned feeling with high value so I
+       created a series of packaging that is made of recyclable kraft paper
+       which looks rustic, with silhouettes and type that are classic black
+       and white to portray the great quality food inside. I have designed a
+       template for a large box of dog food with handles as well as a smaller bag.
+      This packaging could easily be carried over for all of their flavours.</p>
 </main>
 
 <div class="contact">
