--- a/infographic.html
+++ b/infographic.html
@@ -16,7 +16,9 @@ title: Infographic Design · Graphic Designer, Creative Professional · Ottawa, 
     <div class="image">
     	<img src="img/info.png">
     </div>
-    <p>This is an infographic designed to express information about the greenest ways to get around in an eycatching and interesting way. Earthy colours were mixed with bring reds. All illustrations were illustrated by me. </p>
+    <p>This is an infographic designed to express information about the greenest
+       ways to get around in an eycatching and interesting way. Earthy colours
+       were mixed with bring reds. All illustrations were illustrated by me. </p>
 </main>
 
 <div class="contact">
