--- a/barkpark.html
+++ b/barkpark.html
@@ -19,7 +19,9 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
       <img src="img/barkpark3.jpg" alt="App Flow"></a>
       <img src="img/barkpark4.jpg" alt="Map Mockup on iPhone"></a>
     </div>
-    <p>Bark Park is a dog park navigation and rating app for Ottawa. The process which lead to the creation of this app included empathy mapping, market research, prototyping, and 2 rounds of usability testing.</p>
+    <p>Bark Park is a dog park navigation and rating app for Ottawa. The process
+       which lead to the creation of this app included empathy mapping, market research,
+      prototyping, and 2 rounds of usability testing.</p>
 </main>
 
 <div class="contact">
