--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ layout: default
 
 <div class="about">
   <a id="about"></a>
-  <p>Shannon Hawn is a graphic designer based in Ottawa with her husband and their tiny zoo of animals. She is an advertising grad, Pinterest addict and lover of pugs. She loves beautiful design, photography and illustration.</p>
+  <p>Shannon Hawn is a graphic designer based in Ottawa with her husband and
+    their tiny zoo of animals. She is an advertising grad, Pinterest addict
+    and lover of pugs. She loves branding, packaging and illustration.</p>
 </div>
 
   <div class="work">
