added page for evergreen app

--- a/bekkers.html
+++ b/bekkers.html
@@ -14,7 +14,9 @@ title: Logo Design and Branding · Graphic Designer, Creative Professional · Ot
 <main>
     <h4>Bekker's Pet Care Logo Redesign</h4>
     <div class="image">
-    	<img src="img/logo.png" alt="Logo of a Dog and Cat"></a>
+    	<img src="img/logo.png" alt="Logo of a dog and cat"></a>
+      <img src="img/bekkers.jpg" alt="Style sheet for logo design"></a>
+      <img src="img/bekkers2.jpg" alt="Website mockup on Apple monitor"></a>
     </div>
     <p>For this project I rebranded an existing company. Bekker's Pet Care is a boarding kennel
        for cats and dogs. After doing market research I created a logo of a dog and cat sharing
