--- a/barkpark.html
+++ b/barkpark.html
@@ -12,16 +12,34 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
 </header>
 
 <main>
-    <h4>Bark Park App Design</h4>
+  <div class="grid island" role="" id="">
+
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit l-1-3 gutter island push-2">
+      <div class="all-left">
+    <h4 class="name">Bark Park App Design</h4>
+    <p>Bark Park is a dog park navigation and rating app for Ottawa. The process
+       which lead to the creation of this app included empathy mapping, market research,
+      prototyping, and 2 rounds of usability testing.</p>
+    </div>
+  </div>
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit l-1-3 island">
+
+      <div class="grid island" role="" id="">
+        <div class="unit unit-xs-1-3 unit-s-1 unit-m-1 unit l-1 push-1">
+          <div class="all-right">
+
     <div class="image">
     	<img src="img/barkparkphone.png" alt="App Mockup on iPhone"></a>
       <img src="img/barkpark2.jpg" alt="Storyboard"></a>
       <img src="img/barkpark3.jpg" alt="App Flow"></a>
       <img src="img/barkpark4.jpg" alt="Map Mockup on iPhone"></a>
     </div>
-    <p>Bark Park is a dog park navigation and rating app for Ottawa. The process
-       which lead to the creation of this app included empathy mapping, market research,
-      prototyping, and 2 rounds of usability testing.</p>
+  </div>
+</div>
+</div>
+</div>
+</div>
+
 </main>
 
 <div class="contact">
