added jekyll tag

--- a/pagelayout.html
+++ b/pagelayout.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-div.img {
-    margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 180px;
-}
+---
+layout: default
+title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
+---
 
-div.img:hover {
-    border: 1px solid #777;
-}
-
-div.img img {
-    width: 100%;
-    height: auto;
-}
-
-div.desc {
-    padding: 15px;
-    text-align: center;
-}
-</style>
-</head>
 <body>
 
 <div class="img">
