--- a/pagelayout.html
+++ b/pagelayout.html
@@ -9,7 +9,14 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
   <a target="_blank" href="img/barkparkphone.png">
     <img src="img/barkparkphone.png" alt="" width="300" height="200">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Mockup of loading screen</div>
+</div>
+
+<div class="img">
+  <a target="_blank" href="img/barkpark4.jpg">
+    <img src="img/barkpark4.jpg" alt="" width="600" height="400">
+  </a>
+  <div class="desc">Mockup of map screen</div>
 </div>
 
 <div class="img">
@@ -22,13 +29,6 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
 <div class="img">
   <a target="_blank" href="img/barkpark3.jpg">
     <img src="img/barkpark3.jpg" alt="" width="600" height="400">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="img">
-  <a target="_blank" href="img/barkpark4.jpg">
-    <img src="img/barkpark4.jpg" alt="" width="600" height="400">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
