--- a/pagelayout.html
+++ b/pagelayout.html
@@ -2,7 +2,14 @@
 layout: default
 title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
-
+<header>
+    <div class="nav">
+        <a id="nav"></a>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+      </ul>
+    </div>
+</header>
 <body>
 
 <div class="img">
