--- a/pagelayout.html
+++ b/pagelayout.html
@@ -9,6 +9,29 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
         <li><a href="index.html">HOME</a></li>
       </ul>
     </div>
+
+<style>
+div.img {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.img:hover {
+    border: 1px solid #777;
+}
+
+div.img img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+</style>
 </header>
 <body>
 
