--- a/pagelayout.html
+++ b/pagelayout.html
@@ -32,6 +32,15 @@ div.desc {
 </header>
 <body>
 
+  <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit l-1-3 gutter island push-2">
+    <div class="all-left">
+  <h4 class="name">Bark Park App Design</h4>
+  <p>Bark Park is a dog park navigation and rating app for Ottawa. The process
+     which lead to the creation of this app included empathy mapping, market research,
+    prototyping, and 2 rounds of usability testing.</p>
+  </div>
+</div>
+
 <div class="img">
   <a target="_blank" href="img/barkparkphone.png">
     <img src="img/barkparkphone.png" alt="" width="300" height="200">
