--- a/pagelayout.html
+++ b/pagelayout.html
@@ -6,29 +6,6 @@
         <li><a href="index.html">HOME</a></li>
       </ul>
     </div>
-
-<style>
-div.img {
-    margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 180px;
-}
-
-div.img:hover {
-    border: 1px solid #777;
-}
-
-div.img img {
-    width: 100%;
-    height: auto;
-}
-
-div.desc {
-    padding: 15px;
-    text-align: center;
-}
-</style>
 </header>
 <body>
 
@@ -41,28 +18,28 @@ div.desc {
   </div>
 </div>
 
-<div class="img">
+<div class="image">
   <a target="_blank" href="img/barkparkphone.png">
     <img src="img/barkparkphone.png" alt="" width="300" height="200">
   </a>
   <div class="desc">Mockup of loading screen</div>
 </div>
 
-<div class="img">
+<div class="image">
   <a target="_blank" href="img/barkpark4.jpg">
     <img src="img/barkpark4.jpg" alt="" width="600" height="400">
   </a>
   <div class="desc">Mockup of map screen</div>
 </div>
 
-<div class="img">
+<div class="image">
   <a target="_blank" href="img/barkpark2.jpg">
     <img src="img/barkpark2.jpg" alt="" width="600" height="400">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
-<div class="img">
+<div class="image">
   <a target="_blank" href="img/barkpark3.jpg">
     <img src="img/barkpark3.jpg" alt="" width="600" height="400">
   </a>
