--- a/pagelayout.html
+++ b/pagelayout.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
+---
 
 <header>
     <div class="nav">
