--- a/pagelayout.html
+++ b/pagelayout.html
@@ -1,7 +1,6 @@
----
-title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
----
 
+<!DOCTYPE html>
+<html lang="en-ca">
 <header>
     <div class="nav">
         <a id="nav"></a>
