--- a/pagelayout.html
+++ b/pagelayout.html
@@ -8,6 +8,28 @@
       </ul>
     </div>
 </header>
+<style>
+div.image {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.img:hover {
+    border: 1px solid #777;
+}
+
+div.img img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+</style>
 <body>
 
   <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit l-1-3 gutter island push-2">
