--- a/pagelayout.html
+++ b/pagelayout.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
-<html lang="en-ca">
+---
+layout: default
+title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
+---
 <header>
     <div class="nav">
         <a id="nav"></a>
@@ -8,66 +10,42 @@
       </ul>
     </div>
 </header>
-<style>
-div.image {
-    margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 180px;
-}
 
-div.img:hover {
-    border: 1px solid #777;
-}
+<main>
+  <div class="grid island" role="" id="">
 
-div.img img {
-    width: 100%;
-    height: auto;
-}
+    <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit l-1-3 gutter island push-2">
+      <div class="all-left">
+    <h4 class="name">Bark Park App Design</h4>
+    <p>Bark Park is a dog park navigation and rating app for Ottawa. The process
+       which lead to the creation of this app included empathy mapping, market research,
+      prototyping, and 2 rounds of usability testing.</p>
+    </div>
+  </div>
 
-div.desc {
-    padding: 15px;
-    text-align: center;
-}
-</style>
-<body>
-
-  <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit l-1-3 gutter island push-2">
-    <div class="all-left">
-  <h4 class="name">Bark Park App Design</h4>
-  <p>Bark Park is a dog park navigation and rating app for Ottawa. The process
-     which lead to the creation of this app included empathy mapping, market research,
-    prototyping, and 2 rounds of usability testing.</p>
+<div class="wrap">
+  <div class="box">
+    <div class="boxInner">
+      <img src="img/barkparkphone.png" />
+      <div class="titleBox">Phone Mockup</div>
+    </div>
+  </div>
+  <div class="box">
+    <div class="boxInner">
+      <img src="img/barkpark2.jpg" />
+      <div class="titleBox">Storyboard</div>
+    </div>
+  </div>
+  <div class="box">
+    <div class="boxInner">
+      <img src="img/barkpark3.jpg" />
+      <div class="titleBox">App Flow</div>
+    </div>
+  </div>
+  <div class="box">
+    <div class="boxInner">
+      <img src="img/barkpark4.jpg" />
+      <div class="titleBox">Map Mockup</div>
+    </div>
   </div>
 </div>
-
-<div class="image">
-  <a target="_blank" href="img/barkparkphone.png">
-    <img src="img/barkparkphone.png" alt="" width="300" height="200">
-  </a>
-  <div class="desc">Mockup of loading screen</div>
-</div>
-
-<div class="image">
-  <a target="_blank" href="img/barkpark4.jpg">
-    <img src="img/barkpark4.jpg" alt="" width="600" height="400">
-  </a>
-  <div class="desc">Mockup of map screen</div>
-</div>
-
-<div class="image">
-  <a target="_blank" href="img/barkpark2.jpg">
-    <img src="img/barkpark2.jpg" alt="" width="600" height="400">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="image">
-  <a target="_blank" href="img/barkpark3.jpg">
-    <img src="img/barkpark3.jpg" alt="" width="600" height="400">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-</body>
-</html>
