tried new gallery layout

--- a/pagelayout.html
+++ b/pagelayout.html
@@ -22,3 +22,11 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
       prototyping, and 2 rounds of usability testing.</p>
     </div>
   </div>
+
+ <div id="gallery">
+   <ul id="navigation">
+     <li><a href="mockup"><img alt="" src="img/barkparkphone.png"></a>/</li>
+    <ul>
+    <div id="full-picture">
+      <div><a name="mockup"></a><img alt="" src="img/barkparkphone.png"></div>
+    </div>
