--- a/pagelayout.html
+++ b/pagelayout.html
@@ -22,6 +22,7 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
       prototyping, and 2 rounds of usability testing.</p>
     </div>
   </div>
+</div>
 
  <div id="gallery">
    <ul id="navigation">
@@ -30,3 +31,4 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
     <div id="full-picture">
       <div><a name="mockup"></a><img alt="" src="img/barkparkphone.png"></div>
     </div>
+  </div>
