--- a/pagelayout.html
+++ b/pagelayout.html
@@ -26,7 +26,7 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
 
  <div id="gallery">
    <ul id="navigation">
-     <li><a href="mockup"><img alt="" src="img/barkparkphone.png"></a>/</li>
+     <li><a href="mockup"><img alt="" src="img/barkparkphone.png"></a></li>
    </ul>
     <div id="full-picture">
       <div><a name="mockup"></a><img alt="" src="img/barkparkphone.png"></div>
