--- a/pagelayout.html
+++ b/pagelayout.html
@@ -27,5 +27,8 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
  <div id="gallery">
    <ul id="navigation">
      <li><a href="mockup"><img alt="" src="img/barkparkphone.png"></a></li>
+     <li><a href="mockup map"><img alt="" src="img/barkpark4.jpg"></a></li>
+     <li><a href="storyboard"><img alt="" src="img/barkpark2.jpg"></a></li>
+     <li><a href="app flow"><img alt="" src="img/barkpark3.jpg"></a></li>
    </ul>
 </div>
