added image width

--- a/pagelayout.html
+++ b/pagelayout.html
@@ -25,8 +25,8 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
 
  <div id="gallery">
    <ul id="navigation">
-     <li><a href="mockup"><img alt="" src="img/barkparkphone.png"></a></li>
-     <li><a href="mockup map"><img alt="" src="img/barkpark4.jpg"></a></li>
-     <li><a href="storyboard"><img alt="" src="img/barkpark2.jpg"></a></li>
+     <li><a href="mockup"><img alt="" src="img/barkparkphone.png" width="300" height="400"></a></li>
+     <li><a href="mockup map"><img alt="" src="img/barkpark4.jpg" width="300" height="400"></a></li>
+     <li><a href="storyboard"><img alt="" src="img/barkpark2.jpg" width="300" height="400"></a></li>
    </ul>
 </div>
