--- a/pagelayout.html
+++ b/pagelayout.html
@@ -28,5 +28,6 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
      <li><a href="mockup"><img alt="" src="img/barkparkphone.png" width="300" height="400"></a></li>
      <li><a href="mockup map"><img alt="" src="img/barkpark4.jpg" width="300" height="400"></a></li>
      <li><a href="storyboard"><img alt="" src="img/barkpark2.jpg" width="300" height="400"></a></li>
+     <li><a href="app flow"><img alt="" src="img/barkpark3.jpg" width="300" height="400"></a></li>
    </ul>
 </div>
