--- a/pagelayout.html
+++ b/pagelayout.html
@@ -12,16 +12,13 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
 </header>
 
 <main>
-  <div class="grid island" role="" id="">
-    <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit l-1-3 gutter island push-2">
-      <div class="all-left">
+  <div class="single"
     <h4 class="name">Bark Park App Design</h4>
-    <p>Bark Park is a dog park navigation and rating app for Ottawa. The process
+    <p class="description">Bark Park is a dog park navigation and rating app for Ottawa. The process
        which lead to the creation of this app included empathy mapping, market research,
       prototyping, and 2 rounds of usability testing.</p>
-    </div>
   </div>
-</div>
+
 
  <div id="gallery">
    <ul id="navigation">
