--- a/bekkers.html
+++ b/bekkers.html
@@ -12,18 +12,23 @@ title: Logo Design and Branding · Graphic Designer, Creative Professional · Ot
 </header>
 
 <main>
-    <h4>Bekker's Pet Care Logo Redesign</h4>
-    <div class="image">
-    	<img src="img/logo.png" alt="Logo of a dog and cat"></a>
-      <img src="img/bekkers.jpg" alt="Style sheet for logo design"></a>
-      <img src="img/bekkers2.jpg" alt="Website mockup on Apple monitor"></a>
-    </div>
-    <p>For this project I rebranded an existing company. Bekker's Pet Care is a boarding kennel
+  <div class="single"
+    <h4 class="name">Bekker's Pet Care Logo Redesign</h4>
+    <p class="description">For this project I rebranded an existing company. Bekker's Pet Care is a boarding kennel
        for cats and dogs. After doing market research I created a logo of a dog and cat sharing
       their enthusiasm to go to the kennel with their mouths forming a speech bubble. It was
       important to show that this was a place that a pet would enjoy staying at. I also designed
       corresponding stationary, employee clothing and website.</p>
-</main>
+  </div>
+
+
+ <div id="gallery">
+   <ul id="navigation">
+     <li><img alt="" src="img/logo.png" width="300" height="400"></a></li>
+     <li><img alt="" src="img/bekkers.jpg" width="300" height="400"></a></li>
+     <li><img alt="" src="img/bekkers2.jpg" width="300" height="400"></a></li>
+   </ul>
+</div>
 
 <div class="contact">
   <a id="contact"></a>
