changed doll to new lyour

--- a/doll.html
+++ b/doll.html
@@ -12,21 +12,25 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
 </header>
 
 <main>
-    <h4>Momiji Doll Package</h4>
-    <div class="image">
-    	<img src="img/doll.png" alt="Logo of doll packaging"></a>
-      <img src="img/doll1.png" alt="Style sheet doll packaging"></a>
-      <img src="img/doll3.png" alt="Top label of doll packaging"></a>
-      <img src="img/doll4.png" alt="Shopping bag"></a>
-      <img src="img/doll5.png" alt="Doll illustration"></a>
-      <img src="img/doll6.png" alt="Packaging template"></a>
-      <img src="img/doll7.png" alt="Mockup of doll packaging"></a>
-      <img src="img/doll5.png" alt="Doll illustration-front view"></a>
-    </div>
-    <p>I designed new branding and packaging for an existing toy: Momiji Doll.
+  <div class="single"
+    <h4 class="name">Momiji Doll Package</h4>
+    <p class="description">I designed new branding and packaging for an existing toy: Momiji Doll.
       This series is for their DIY doll which arrives completely white and the child paints themselves.
       I created the template to print the packaging.</p>
-</main>
+  </div>
+
+
+ <div id="gallery">
+   <ul id="navigation">
+     <li><img alt="" src="img/doll.png" width="300" height="400"></a></li>
+     <li><img alt="" src="img/doll1.png" width="300" height="400"></a></li>
+     <li><img alt="" src="img/doll3.png" width="300" height="400"></a></li>
+     <li><img alt="" src="img/doll4.png" width="300" height="400"></a></li>
+     <li><img alt="" src="img/doll5.png" width="300" height="400"></a></li>
+     <li><img alt="" src="img/doll6.png" width="300" height="400"></a></li>
+     <li><img alt="" src="img/doll7.png" width="300" height="400"></a></li>
+   </ul>
+</div>
 
 <div class="contact">
   <a id="contact"></a>
