made fromm page in the new layout

--- a/fromm.html
+++ b/fromm.html
@@ -12,16 +12,9 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
 </header>
 
 <main>
-    <h4>Fromm Dog Food Package Design</h4>
-    <div class="image">
-    	<img src="img/frommbag.png" alt="Bag of dog food"></a>
-      <img src="img/fromm1.png" alt="Mockups of dog food box"></a>
-      <img src="img/fromm2.jpg" alt="Details of dog food box"></a>
-      <img src="img/fromm3.jpg" alt="Template of dog food box"></a>
-      <img src="img/fromm4.jpg" alt="Detail of fog food tag"></a>
-      <img src="img/fromm5.jpg" alt="Detail of dog pattern"></a>
-    </div>
-    <p>For this project I rebranded a current dog food company - Fromm's.
+  <div class="single"
+    <h4 class="name">Fromm Dog Food Package Design</h4>
+    <p class="description">For this project I rebranded a current dog food company - Fromm's.
        This is a trusted family owned company that prides itself on quality.
        I wanted to mix the rustic family-owned feeling with high value so I
        created a series of packaging that is made of recyclable kraft paper
@@ -29,7 +22,19 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
        and white to portray the great quality food inside. I have designed a
        template for a large box of dog food with handles as well as a smaller bag.
       This packaging could easily be carried over for all of their flavours.</p>
-</main>
+  </div>
+
+
+ <div id="gallery">
+   <ul id="navigation">
+     <li><img alt="" src="img/frommbag.png" width="300" height="400"></a></li>
+     <li><img alt="" src="img/fromm1.png" width="500" height="400"></a></li>
+     <li><img alt="" src="img/fromm2.png" width="500" height="400"></a></li>
+     <li><img alt="" src="img/fromm3.png" width="500" height="400"></a></li>
+     <li><img alt="" src="img/fromm4.png" width="500" height="400"></a></li>
+     <li><img alt="" src="img/fromm5.png" width="500" height="400"></a></li>
+   </ul>
+</div>
 
 <div class="contact">
   <a id="contact"></a>
