changed harry potter page to new layout

--- a/harrypotter.html
+++ b/harrypotter.html
@@ -1,26 +1,20 @@
 ---
 layout: default
-title: Movie Poster Design · Graphic Designer, Creative Professional · Ottawa, Canada
+title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
+<header>
+    <div class="nav">
+        <a id="nav"></a>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+      </ul>
+    </div>
+</header>
 
-  <header>
-      <div class="nav">
-          <a id="nav"></a>
-        <ul>
-          <li><a href="index.html">HOME</a></li>
-        </ul>
-      </div>
-  </header>
-
-    <h2>Harry Potter Movie Poster</h2>
-
-  <div class="left">
-    <img src="img/hpotter.png" alt="Movie Poster of Harry Potter">
-    <img src="img/vinyl.png" alt="Album Cover">
-  </div>
-
-  <div class="right">
-    <p>I designed a movie poster for the final Harry Potter movie. These books and movies have
+<main>
+  <div class="single"
+    <h4 class="name">Movie Poster Design</h4>
+    <p class="description">I designed a movie poster for the final Harry Potter movie. These books and movies have
       such a strong fandom so concept was key to keep fans happy and wanting to see the movie.
       Harry Potter and Voldemort are forever connected due to a backfired curse; Voldemort also uses
       Harry’s blood to come back to life and their wands have twin cores. Because of that my focal point is their faces as one.
@@ -28,23 +22,26 @@ title: Movie Poster Design · Graphic Designer, Creative Professional · Ottawa,
       in the clouds represents the Dark Mark that Voldemort’s followers project into the sky. The
       smoke represents disapparating. The colours used are the colours of the four houses of Hogwarts.
       I created this poster using Photoshop, combining multiple images and using filters. All of the typography
-      was incorporated in Indesign. I designed a corresponding album and cover for the movie soundtrack.
-      <br>
-      <br>
-      <a class="link" href="hpsketches.html"> Sketches </a></p>
+      was incorporated in Indesign. I designed a corresponding album and cover for the movie soundtrack.</p>
   </div>
 
+
+ <div id="gallery">
+   <ul id="navigation">
+     <li><img alt="" src="img/hpotter.png" width="300" height="400"></a></li>
+     <li><img alt="" src="img/vinyl.png" width="600" height="400"></a></li>
+   </ul>
+</div>
+
+<div class="contact">
+  <a id="contact"></a>
 <footer>
-  <div class="contact">
-    <a id="contact"></a>
-  </div>
-
-  <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg" alt=""></a>
-  <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg" alt=""></a>
-  <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg" alt=""></a>
-  <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg" alt=""></a>
-
+  <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a></li>
+  <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a></li>
+  <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
+  <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg"></a></li>
 <div class="top">
   <a href="#nav">TOP</a>
 </div>
 </footer>
+</div>
