changed hp, info and vegan to new layout

--- a/vegan.html
+++ b/vegan.html
@@ -2,7 +2,6 @@
 layout: default
 title: Newsletter Layout · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
-
 <header>
     <div class="nav">
         <a id="nav"></a>
@@ -13,13 +12,17 @@ title: Newsletter Layout · Graphic Designer, Creative Professional · Ottawa, C
 </header>
 
 <main>
-    <h4>Vegan Newsletter</h4>
-    <div class="image">
-    	<img src="img/vegan.png" alt="Newsletter about veganism"></a>
-    </div>
-    <p>I designed a 4 page spread for a Vegan Newsletter for Typography class
-</p>
-</main>
+  <div class="single"
+    <h4 class="name">Vegan Newsletter</h4>
+    <p class="description">I designed a 4 page spread for a Vegan Newsletter for Typography class</p>
+  </div>
+
+
+ <div id="gallery">
+   <ul id="navigation">
+     <li><img alt="" src="img/vegan.png" width="300" height="400"></a></li>
+   </ul>
+</div>
 
 <div class="contact">
   <a id="contact"></a>
