--- a/infographic.html
+++ b/infographic.html
@@ -12,14 +12,19 @@ title: Infographic Design · Graphic Designer, Creative Professional · Ottawa, 
 </header>
 
 <main>
-    <h4>Greenest Ways to Get Around Infographic</h4>
-    <div class="image">
-    	<img src="img/info.png">
-    </div>
-    <p>This is an infographic designed to express information about the greenest
+  <div class="single"
+    <h4 class="name">Greenest Ways to Get Around Infographic</h4>
+    <p class="description">This is an infographic designed to express information about the greenest
        ways to get around in an eycatching and interesting way. Earthy colours
-       were mixed with bring reds. All illustrations were illustrated by me. </p>
-</main>
+       were mixed with bring reds. All illustrations were illustrated by me.</p>
+  </div>
+
+
+ <div id="gallery">
+   <ul id="navigation">
+     <li><img alt="" src="img/info.png" width="300" height="400"></a></li>
+   </ul>
+</div>
 
 <div class="contact">
   <a id="contact"></a>
