added evergreen page, amended image sizes for all project pages

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ layout: default
     and lover of pugs. She loves branding, packaging and illustration.</p>
 </div>
 
-  <div class="work">
+  <div id="gallery">
+      <ul id="navigation">
     <a id="work"></a>
       <a href="{{site.baseurl}}/harrypotter.html"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
       <a href="{{site.baseurl}}/bekkers.html"><img src="img/logo.png" alt="Logo of cat and dog"></a>
@@ -37,6 +38,8 @@ layout: default
       <a href="{{site.baseurl}}/barkpark.html"><img src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
       <a href="{{site.baseurl}}/infographic.html"><img src="img/info.png" alt="infographic"></a>
       <a href="{{site.baseurl}}/doll.html"><img src="img/doll.png" alt="Doll packaging logo"></a>
+      <a href="{{site.baseurl}}/evergreen.html"><img src="img/eglogo.png" alt="App logo" width="300" height="400"></a>
+    </ul>
   </div>
 
 <div class="contact">
