--- a/evergreen.html
+++ b/evergreen.html
@@ -12,16 +12,18 @@ title: Smart Product App Design · Graphic Designer, Creative Professional · Ot
 </header>
 
 <main>
-    <h4>Evergreen</h4>
-    <div class="image">
-    	<img src="img/evergreen.jpg">
-    </div>
-    <p>Evergreen is a smart plant pot that keeps the user informed on the health of their plants
-       as well as waters the plants as needed. When the pot is out of water, needs sunlight, etc.
-      it notifies the user through app notifications. The user will receive monthly Birthday Badges
-      to congratulate them on keeping the plant alive.
+  <div class="single"
+    <h4 class="name">Evergreen App</h4>
+    <p class="description">Evergreen is a smart plant pot that keeps the user informed on the health of their plants as well as waters the plants as needed. When the pot is out of water, needs sunlight, etc. it notifies the user through app notifications. The user will receive monthly Birthday Badges to congratulate them on keeping the plant alive.
 </p>
-</main>
+  </div>
+
+
+ <div id="gallery">
+   <ul id="navigation">
+     <li><img alt="" src="img/evergreen.jpg" width="400" height="3200"></a></li>
+   </ul>
+</div>
 
 <div class="contact">
   <a id="contact"></a>
