amended div names, deleted unnecessary codes

--- a/barkpark.html
+++ b/barkpark.html
@@ -12,8 +12,8 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
 </header>
 
 <main>
-  <div class="single"
-    <h4 class="name">Bark Park App Design</h4>
+  <div>
+    <h2 class="name">Bark Park App Design</h2>
     <p class="description">Bark Park is a dog park navigation and rating app for Ottawa. The process
        which lead to the creation of this app included empathy mapping, market research,
       prototyping, and 2 rounds of usability testing.</p>
@@ -28,6 +28,7 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
      <li><img alt="" src="img/barkpark3.jpg" width="300" height="400"></a></li>
    </ul>
 </div>
+</main>
 
 <div class="contact">
   <a id="contact"></a>
