--- a/bekkers.html
+++ b/bekkers.html
@@ -12,27 +12,27 @@ title: Logo Design and Branding · Graphic Designer, Creative Professional · Ot
 </header>
 
 <main>
-  <div class="single"
-    <h4 class="name">Bekker's Pet Care Logo Redesign</h4>
-    <p class="description">For this project I rebranded an existing company. Bekker's Pet Care is a boarding kennel
+  <div>
+    <h2>Bekker's Pet Care Logo Redesign</h2>
+    <p>For this project I rebranded an existing company. Bekker's Pet Care is a boarding kennel
        for cats and dogs. After doing market research I created a logo of a dog and cat sharing
       their enthusiasm to go to the kennel with their mouths forming a speech bubble. It was
       important to show that this was a place that a pet would enjoy staying at. I also designed
       corresponding stationary, employee clothing and website.</p>
   </div>
 
-
  <div id="gallery">
    <ul id="navigation">
      <li><img alt="" src="img/bekkers2.jpg" width="500" height="400"></a></li>
      <li><img alt="" src="img/logo.png" width="300" height="400"></a></li>
-     <li><img alt="" src="img/bekkers.jpg" width="600" height="400"></a></li>
+     <li><img alt="" src="img/bekkers.jpg" width="700" height="400"></a></li>
    </ul>
 </div>
+</main>
 
+<footer>
 <div class="contact">
   <a id="contact"></a>
-<footer>
   <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a></li>
   <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a></li>
   <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
