--- a/fromm.html
+++ b/fromm.html
@@ -12,8 +12,8 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
 </header>
 
 <main>
-  <div class="single"
-    <h4 class="name">Fromm Dog Food Package Design</h4>
+  <div>
+    <h2 class="name">Fromm Dog Food Package Design</h2>
     <p class="description">For this project I rebranded a current dog food company - Fromm's.
        This is a trusted family owned company that prides itself on quality.
        I wanted to mix the rustic family-owned feeling with high value so I
@@ -23,16 +23,13 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
        template for a large box of dog food with handles as well as a smaller bag.
       This packaging could easily be carried over for all of their flavours.</p>
   </div>
-
+</main>
 
  <div id="gallery">
    <ul id="navigation">
      <li><img alt="" src="img/frommbag.png" width="300" height="400"></a></li>
      <li><img alt="" src="img/fromm1.png" width="300" height="400"></a></li>
      <li><img alt="" src="img/fromm3.jpg" width="600" height="400"></a></li>
-          <li><img alt="" src="img/fromm2.jpg" width="200" height="200"></a></li>
-     <li><img alt="" src="img/fromm4.jpg" width="400" height="200"></a></li>
-     <li><img alt="" src="img/fromm5.jpg" width="400" height="200"></a></li>
    </ul>
 </div>
 
