--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@ layout: default
     <a id="me"></a>
     <h3>Shannon Hawn</h3>
    </div>
- </div>
 </main>
 
 <div class="about">
   <a id="about"></a>
-  <p>Shannon Hawn is a graphic designer based in Ottawa with her husband and
+  <p class="about-me">Shannon Hawn is a graphic designer based in Ottawa with her husband and
     their tiny zoo of animals. She is an advertising grad, Pinterest addict
     and lover of pugs. She loves branding, packaging and illustration.</p>
 </div>
