--- a/infographic.html
+++ b/infographic.html
@@ -12,8 +12,8 @@ title: Infographic Design · Graphic Designer, Creative Professional · Ottawa, 
 </header>
 
 <main>
-  <div class="single"
-    <h4 class="name">Greenest Ways to Get Around Infographic</h4>
+  <div>
+    <h2>Greenest Ways to Get Around Infographic</h2>
     <p class="description">This is an infographic designed to express information about the greenest
        ways to get around in an eycatching and interesting way. Earthy colours
        were mixed with bring reds. All illustrations were illustrated by me.</p>
@@ -25,6 +25,7 @@ title: Infographic Design · Graphic Designer, Creative Professional · Ottawa, 
      <li><img alt="" src="img/info.png" width="300" height="400"></a></li>
    </ul>
 </div>
+</main>
 
 <div class="contact">
   <a id="contact"></a>
