--- a/vegan.html
+++ b/vegan.html
@@ -12,8 +12,8 @@ title: Newsletter Layout · Graphic Designer, Creative Professional · Ottawa, C
 </header>
 
 <main>
-  <div class="single"
-    <h4 class="name">Vegan Newsletter</h4>
+  <div>
+    <h2 class="name">Vegan Newsletter</h2>
     <p class="description">I designed a 4 page spread for a Vegan Newsletter for Typography class</p>
   </div>
 
@@ -24,6 +24,7 @@ title: Newsletter Layout · Graphic Designer, Creative Professional · Ottawa, C
      <li><img alt="" src="img/vegan1.jpg" width="500" height="400"></a></li>
    </ul>
 </div>
+<main>
 
 <div class="contact">
   <a id="contact"></a>
