--- a/doll.html
+++ b/doll.html
@@ -12,8 +12,8 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
 </header>
 
 <main>
-  <div class="single"
-    <h4 class="name">Momiji Doll Package</h4>
+  <div>
+    <h2>Momiji Doll Package</h2>
     <p class="description">I designed new branding and packaging for an existing toy: Momiji Doll.
       This series is for their DIY doll which arrives completely white and the child paints themselves.
       I created the template to print the packaging.</p>
@@ -31,6 +31,7 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
     <li><img alt="" src="img/doll4.png" width="300" height="200"></a></li>
    </ul>
 </div>
+</main>
 
 <div class="contact">
   <a id="contact"></a>
