--- a/harrypotter.html
+++ b/harrypotter.html
@@ -12,8 +12,8 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
 </header>
 
 <main>
-  <div class="single"
-    <h4 class="name">Movie Poster Design</h4>
+  <div>
+    <h2>Movie Poster Design</h2>
     <p class="description">I designed a movie poster for the final Harry Potter movie. These books and movies have
       such a strong fandom so concept was key to keep fans happy and wanting to see the movie.
       Harry Potter and Voldemort are forever connected due to a backfired curse; Voldemort also uses
@@ -24,7 +24,7 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
       I created this poster using Photoshop, combining multiple images and using filters. All of the typography
       was incorporated in Indesign. I designed a corresponding album and cover for the movie soundtrack.</p>
   </div>
-
+</main>
 
  <div id="gallery">
    <ul id="navigation">
