--- a/bekkers.html
+++ b/bekkers.html
@@ -12,9 +12,9 @@ title: Logo Design and Branding · Graphic Designer, Creative Professional · Ot
 </header>
 
 <main>
-  <div>
+  <div class="work">
     <h2>Bekker's Pet Care Logo Redesign</h2>
-    <p>For this project I rebranded an existing company. Bekker's Pet Care is a boarding kennel
+    <p class="description">For this project I rebranded an existing company. Bekker's Pet Care is a boarding kennel
        for cats and dogs. After doing market research I created a logo of a dog and cat sharing
       their enthusiasm to go to the kennel with their mouths forming a speech bubble. It was
       important to show that this was a place that a pet would enjoy staying at. I also designed
@@ -23,9 +23,9 @@ title: Logo Design and Branding · Graphic Designer, Creative Professional · Ot
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img alt="" src="img/bekkers2.jpg" width="500" height="400"></a></li>
-     <li><img alt="" src="img/logo.png" width="300" height="400"></a></li>
-     <li><img alt="" src="img/bekkers.jpg" width="700" height="400"></a></li>
+     <li><img src="img/bekkers2.jpg" width="500" height="400" alt=""></li>
+     <li><img src="img/logo.png" width="300" height="400" alt=""></li>
+     <li><img src="img/bekkers.jpg" width="700" height="400" alt=""></li>
    </ul>
 </div>
 </main>
@@ -33,12 +33,12 @@ title: Logo Design and Branding · Graphic Designer, Creative Professional · Ot
 <footer>
 <div class="contact">
   <a id="contact"></a>
-  <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a></li>
-  <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a></li>
-  <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
-  <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg"></a></li>
+  <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg" alt=""></a>
+  <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg" alt=""></a>
+  <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg" alt=""></a>
+  <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg" alt=""></a>
 <div class="top">
   <a href="#nav">TOP</a>
 </div>
-</footer>
 </div>
+</footer>
