added baseurl to images

--- a/barkpark.html
+++ b/barkpark.html
@@ -22,10 +22,10 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img alt="" src="img/barkparkphone.png" width="300" height="400"></a></li>
-     <li><img alt="" src="img/barkpark4.jpg" width="300" height="400"></a></li>
-     <li><img alt="" src="img/barkpark2.jpg" width="300" height="400"></a></li>
-     <li><img alt="" src="img/barkpark3.jpg" width="300" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/barkparkphone.png" width="300" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/barkpark4.jpg" width="300" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/barkpark2.jpg" width="300" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/barkpark3.jpg" width="300" height="400"></a></li>
    </ul>
 </div>
 </main>
