--- a/bekkers.html
+++ b/bekkers.html
@@ -23,9 +23,9 @@ title: Logo Design and Branding · Graphic Designer, Creative Professional · Ot
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img src="img/bekkers2.jpg" width="500" height="400" alt=""></li>
-     <li><img src="img/logo.png" width="300" height="400" alt=""></li>
-     <li><img src="img/bekkers.jpg" width="700" height="400" alt=""></li>
+     <li><img src="{{site.baseurl}}/bekkers2.jpg" width="500" height="400" alt=""></li>
+     <li><img src="{{site.baseurl}}/logo.png" width="300" height="400" alt=""></li>
+     <li><img src="{{site.baseurl}}/bekkers.jpg" width="700" height="400" alt=""></li>
    </ul>
 </div>
 </main>
