--- a/evergreen.html
+++ b/evergreen.html
@@ -21,7 +21,7 @@ title: Smart Product App Design · Graphic Designer, Creative Professional · Ot
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img alt="" src="img/evergreen.jpg" width="400" height="3200"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/evergreen.jpg" width="400" height="3200"></a></li>
    </ul>
 </div>
 </main>
