--- a/harrypotter.html
+++ b/harrypotter.html
@@ -28,8 +28,8 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img alt="" src="img/hpotter.png" width="300" height="400"></a></li>
-     <li><img alt="" src="img/vinyl.png" width="300" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/hpotter.png" width="300" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/vinyl.png" width="300" height="400"></a></li>
    </ul>
 </div>
 
