forgot to link img

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: Shannon Hawn Portfolio
+description: Shannon Hawn Graphic Designer Ottawa
 ---
 <header>
     <div class="nav">
@@ -30,7 +32,7 @@ layout: default
   <div id="gallery">
       <ul id="navigation">
     <a id="work"></a>
-      <a href="{{site.baseurl}}/harrypotter.html"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
+      <a href="{{site.baseurl}}/img/harrypotter.html"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
       <a href="{{site.baseurl}}/bekkers.html"><img src="img/logo.png" alt="Logo of cat and dog"></a>
       <a href="{{site.baseurl}}/fromm.html"><img src="img/frommbag.png" alt="Bag of dog food"></a>
       <a href="{{site.baseurl}}/vegan.html"><img src="img/vegan.png" alt="Newsletter on veganism"></a>
