--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@ layout: default
   <div id="gallery">
       <ul id="navigation">
     <a id="work"></a>
-      <a href="img/harrypotter.html"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
-      <a href="img/bekkers.html"><img src="img/logo.png" alt="Logo of cat and dog"></a>
-      <a href="img/fromm.html"><img src="img/frommbag.png" alt="Bag of dog food"></a>
-      <a href="img/vegan.html"><img src="img/vegan.png" alt="Newsletter on veganism"></a>
-      <a href="img/barkpark.html"><img src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
-      <a href="img/infographic.html"><img src="img/info.png" alt="infographic"></a>
-      <a href="img/doll.html"><img src="img/doll.png" alt="Doll packaging logo"></a>
-      <a href="img/evergreen.html"><img src="img/eglogo.png" alt="App logo" width="300" height="400"></a>
+      <a href="harrypotter.html"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
+      <a href="bekkers.html"><img src="img/logo.png" alt="Logo of cat and dog"></a>
+      <a href="fromm.html"><img src="img/frommbag.png" alt="Bag of dog food"></a>
+      <a href="vegan.html"><img src="img/vegan.png" alt="Newsletter on veganism"></a>
+      <a href="barkpark.html"><img src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
+      <a href="infographic.html"><img src="img/info.png" alt="infographic"></a>
+      <a href="doll.html"><img src="img/doll.png" alt="Doll packaging logo"></a>
+      <a href="evergreen.html"><img src="img/eglogo.png" alt="App logo" width="300" height="400"></a>
     </ul>
   </div>
 
