added img to links on doll page

--- a/doll.html
+++ b/doll.html
@@ -22,13 +22,13 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img alt="" src="{{site.baseurl}}/doll.png" width="300" height="400"></a></li>
-    <li><img alt="" src="{{site.baseurl}}/doll6.png" width="500" height="400"></a></li>
-    <li><img alt="" src="{{site.baseurl}}/doll5.png" width="400" height="400"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/doll1.png" width="200" height="200"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/doll3.png" width="200" height="200"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/doll7.png" width="300" height="200"></a></li>
-    <li><img alt="" src="{{site.baseurl}}/doll4.png" width="300" height="200"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/img/doll.png" width="300" height="400"></a></li>
+    <li><img alt="" src="{{site.baseurl}}/img/doll6.png" width="500" height="400"></a></li>
+    <li><img alt="" src="{{site.baseurl}}/img/doll5.png" width="400" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/img/doll1.png" width="200" height="200"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/img/doll3.png" width="200" height="200"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/img/doll7.png" width="300" height="200"></a></li>
+    <li><img alt="" src="{{site.baseurl}}/img/doll4.png" width="300" height="200"></a></li>
    </ul>
 </div>
 </main>
