--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ layout: default
  </div>
 </main>
 
+
+<div class="grid island" role="main" id="top">
+
+  <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 gutter island push-2">
 <div class="about">
   <a id="about"></a>
   <p class->Shannon Hawn is a graphic designer based in Ottawa with her husband and
@@ -41,6 +45,10 @@ layout: default
       <a href="evergreen.html"><img src="img/eglogo.png" alt="App logo" width="300" height="400"></a>
     </ul>
   </div>
+
+</div>
+</div>
+
 
 <div class="contact">
   <a id="contact"></a>
