added img to baseurl image tags

--- a/fromm.html
+++ b/fromm.html
@@ -27,9 +27,9 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img alt="" src="{{site.baseurl}}/frommbag.png" width="300" height="400"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/fromm1.png" width="300" height="400"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/fromm3.jpg" width="600" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/img/frommbag.png" width="300" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/img/fromm1.png" width="300" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/img/fromm3.jpg" width="600" height="400"></a></li>
    </ul>
 </div>
 
