--- a/vegan.html
+++ b/vegan.html
@@ -20,8 +20,8 @@ title: Newsletter Layout · Graphic Designer, Creative Professional · Ottawa, C
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img alt="" src="{{site.baseurl}}/vegan.png" width="300" height="400"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/vegan1.jpg" width="500" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/img/vegan.png" width="300" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/img/vegan1.jpg" width="500" height="400"></a></li>
    </ul>
 </div>
 <main>
