--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ layout: default
 </main>
 
 
-<div class="grid island" role="main" id="top">
+<div class="grid">
 
-  <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3 gutter island push-2">
+  <div class="unit unit-xs-1 s-1-2 m-1-3 l-1-3 relative">
 <div class="about">
   <a id="about"></a>
   <p class->Shannon Hawn is a graphic designer based in Ottawa with her husband and
@@ -35,14 +35,14 @@ layout: default
   <div id="gallery">
       <ul id="navigation">
     <a id="work"></a>
-      <a href="harrypotter.html"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
-      <a href="bekkers.html"><img src="img/logo.png" alt="Logo of cat and dog"></a>
-      <a href="fromm.html"><img src="img/frommbag.png" alt="Bag of dog food"></a>
-      <a href="vegan.html"><img src="img/vegan.png" alt="Newsletter on veganism"></a>
-      <a href="barkpark.html"><img src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
-      <a href="infographic.html"><img src="img/info.png" alt="infographic"></a>
-      <a href="doll.html"><img src="img/doll.png" alt="Doll packaging logo"></a>
-      <a href="evergreen.html"><img src="img/eglogo.png" alt="App logo" width="300" height="400"></a>
+      <a href="{{site.baseurl}}/harrypotter/"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
+      <a href="{{site.baseurl}}/bekkers/"><img src="img/logo.png" alt="Logo of cat and dog"></a>
+      <a href="{{site.baseurl}}/fromm/"><img src="img/frommbag.png" alt="Bag of dog food"></a>
+      <a href="{{site.baseurl}}/vegan/"><img src="img/vegan.png" alt="Newsletter on veganism"></a>
+      <a href="{{site.baseurl}}/barkpark/"><img src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
+      <a href="{{site.baseurl}}/infographic/"><img src="img/info.png" alt="infographic"></a>
+      <a href="{{site.baseurl}}/doll/"><img src="img/doll.png" alt="Doll packaging logo"></a>
+      <a href="{{site.baseurl}}/evergreen/"><img src="img/eglogo.png" alt="App logo" width="300" height="400"></a>
     </ul>
   </div>
 
