--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 
 <div class="grid">
 
-  <div class="unit unit-xs-1 s-1-2 m-2-3 l-4">
+  <div class="unit unit-xs-2-3 s-1-2 m-2-3 l-4">
 
   <div id="gallery">
       <ul id="navigation">
