--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 
 <div class="grid">
 
-  <div class="unit xs-1-2 s-1-2 m-1-4 l-1-4 xl-1-4">
+  <div class="unit xs-4 s-1-4 m-1-4 l-1-4 xl-1-4">
 
   <div id="gallery">
       <ul id="navigation">
