--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ layout: default
     and lover of pugs. She loves branding, packaging and illustration.</p>
 </div>
 
-
+<div class="grid grid-middle">
+  <div class="unit xs-1 s-1-2 m-1-3 l-2-3"
   <div id="gallery">
       <ul id="navigation">
     <a id="work"></a>
@@ -42,12 +43,13 @@ layout: default
       <a href="{{site.baseurl}}/evergreen/"><img src="img/eglogo.png" alt="App logo" width="300" height="400"></a>
     </ul>
   </div>
+</div>
+</div>
 
 
-
+<footer>
 <div class="contact">
   <a id="contact"></a>
-<footer>
   <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a>
   <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a>
   <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a>
@@ -55,5 +57,5 @@ layout: default
 <div class="top">
   <a href="#nav">TOP</a>
 </div>
-</footer>
 </div>
+</footer>
