--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@ layout: default
 </div>
 
 <div class="grid grid-middle">
-  <div class="unit xs-1 s-1-2 m-1-3 l-2-3"
   <div id="gallery">
       <ul id="navigation">
     <a id="work"></a>
+      <div class="unit xs-1 s-1-2 m-1-3 l-2-3"
       <a href="{{site.baseurl}}/harrypotter/"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
+    </div>
+    <div class="unit xs-1 s-1-2 m-1-3 l-2-3"
       <a href="{{site.baseurl}}/bekkers/"><img src="img/logo.png" alt="Logo of cat and dog"></a>
+    </div>
       <a href="{{site.baseurl}}/fromm/"><img src="img/frommbag.png" alt="Bag of dog food"></a>
       <a href="{{site.baseurl}}/vegan/"><img src="img/vegan.png" alt="Newsletter on veganism"></a>
       <a href="{{site.baseurl}}/barkpark/"><img src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
