--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+
 ---
 <header>
     <div class="nav">
@@ -18,7 +19,6 @@ layout: default
     <a id="me"></a>
     <h3>Shannon Hawn</h3>
    </div>
- </div>
 </main>
 
 <div class="about">
@@ -28,26 +28,20 @@ layout: default
     and lover of pugs. She loves branding, packaging and illustration.</p>
 </div>
 
-<div class="grid grid-middle">
+
   <div id="gallery">
       <ul id="navigation">
     <a id="work"></a>
-      <div class="unit xs-1 s-1-2 m-1-3 l-2-3"
-      <a href="{{site.baseurl}}/harrypotter/"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
-    </div>
-    <div class="unit xs-1 s-1-2 m-1-3 l-2-3"
-      <a href="{{site.baseurl}}/bekkers/"><img src="img/logo.png" alt="Logo of cat and dog"></a>
-    </div>
-      <a href="{{site.baseurl}}/fromm/"><img src="img/frommbag.png" alt="Bag of dog food"></a>
-      <a href="{{site.baseurl}}/vegan/"><img src="img/vegan.png" alt="Newsletter on veganism"></a>
-      <a href="{{site.baseurl}}/barkpark/"><img src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
-      <a href="{{site.baseurl}}/infographic/"><img src="img/info.png" alt="infographic"></a>
-      <a href="{{site.baseurl}}/doll/"><img src="img/doll.png" alt="Doll packaging logo"></a>
-      <a href="{{site.baseurl}}/evergreen/"><img src="img/eglogo.png" alt="App logo" width="300" height="400"></a>
+      <a href="harrypotter.html"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
+      <a href="bekkers.html"><img src="img/logo.png" alt="Logo of cat and dog"></a>
+      <a href="fromm.html"><img src="img/frommbag.png" alt="Bag of dog food"></a>
+      <a href="vegan.html"><img src="img/vegan.png" alt="Newsletter on veganism"></a>
+      <a href="barkpark.html"><img src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
+      <a href="infographic.html"><img src="img/info.png" alt="infographic"></a>
+      <a href="doll.html"><img src="img/doll.png" alt="Doll packaging logo"></a>
+      <a href="evergreen.html"><img src="img/eglogo.png" alt="App logo" width="300" height="400"></a>
     </ul>
   </div>
-</div>
-</div>
 
 
 <footer>
