added flex to logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Shannon Hawn Portfolio • Graphic Designer • Ottawa, Ontario
 
 <main>
   <div class="image">
-    <img class="me" src="img/shannon.svg" alt="illustration of designer">
+    <img class="img-flex" src="img/shannon.svg" alt="illustration of designer">
     <a id="me"></a>
     <h3>Shannon Hawn</h3>
    </div>
