added id to TOP

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ title: Shannon Hawn Portfolio • Graphic Designer • Ottawa, Ontario
   <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a>
   <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg"></a>
 <div class="top">
-  <a href="#nav">TOP</a>
+  <a href="#nav" id="top">TOP</a>
 </div>
 </div>
 </footer>
