amended img-flex

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Shannon Hawn Portfolio • Graphic Designer • Ottawa, Ontario
 
 <main>
   <div class="image">
-    <img class="img-flex" src="img/shannon.svg" alt="illustration of designer">
+    <img class="me" src="img/shannon.svg" alt="illustration of designer">
     <a id="me"></a>
     <h3>Shannon Hawn</h3>
    </div>
@@ -32,14 +32,14 @@ title: Shannon Hawn Portfolio • Graphic Designer • Ottawa, Ontario
   <div id="gallery">
       <ul id="navigation">
     <a id="work"></a>
-      <a href="harrypotter.html"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
-      <a href="bekkers.html"><img src="img/logo.png" alt="Logo of cat and dog"></a>
-      <a href="fromm.html"><img src="img/frommbag.png" alt="Bag of dog food"></a>
-      <a href="vegan.html"><img src="img/vegan.png" alt="Newsletter on veganism"></a>
-      <a href="barkpark.html"><img src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
-      <a href="infographic.html"><img src="img/info.png" alt="infographic"></a>
-      <a href="doll.html"><img src="img/doll.png" alt="Doll packaging logo"></a>
-      <a href="evergreen.html"><img src="img/eglogo.png" alt="App logo" width="300" height="400"></a>
+      <a href="harrypotter.html"><img class="img-flex" src="img/hpotter.png" alt="Harry Potter poster"></a>
+      <a href="bekkers.html"><img class="img-flex" src="img/logo.png" alt="Logo of cat and dog"></a>
+      <a href="fromm.html"><img class="img-flex" src="img/frommbag.png" alt="Bag of dog food"></a>
+      <a href="vegan.html"><img class="img-flex" src="img/vegan.png" alt="Newsletter on veganism"></a>
+      <a href="barkpark.html"><img class="img-flex" src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
+      <a href="infographic.html"><img class="img-flex" src="img/info.png" alt="infographic"></a>
+      <a href="doll.html"><img class="img-flex" src="img/doll.png" alt="Doll packaging logo"></a>
+      <a href="evergreen.html"><img class="img-flex" src="img/eglogo.png" alt="App logo" width="300" height="400"></a>
     </ul>
   </div>
 
